# zkOS-circuits

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  rust-toolchain.toml
.github/actions/prepare-rust-env/: action.yml
.github/scripts/: metrics-diff-presenter.py
.github/workflows/: _check-vars-and-secrets.yml  _measure-circuits.yml  _rust-crates-checks.yml  _test-anonymity-revoking.yml  nightly-benches.yml  on-main-branch-push-pull-request.yml  on-main-branch-push-pull_request.yml  yaml-lint.yml  yaml-validate.yml
crates/macros/: Cargo.toml
crates/macros/src/: embed.rs  lib.rs
crates/shielder-anonymity-revoking/: Cargo.toml  ids.csv  transactions.csv
crates/shielder-anonymity-revoking/src/: chain.rs  cli.rs  csv.rs  db.rs  main.rs
crates/shielder-circuits/: Cargo.toml
crates/shielder-circuits/.cargo/: config.toml
crates/shielder-circuits/benches/: batching.rs  bench.rs
crates/shielder-circuits/src/: column_pool.rs  config_builder.rs  consts.rs  curve_arithmetic.rs  curve_operations.rs  embed.rs  instance_wrapper.rs  lib.rs  range_table.rs  synthesis_helpers.rs  synthesizer.rs  todo.rs  utils.rs  version.rs
crates/shielder-circuits/src/chips/: asymmetric_encryption.rs  balances.rs  balances_increase.rs  balances_update.rs  el_gamal.rs  id_hiding.rs  is_point_on_curve.rs  is_point_on_curve_affine.rs  is_quadratic_residue.rs  mac.rs  mod.rs  note.rs  point_add.rs  point_double.rs  points_add.rs  scalar_multiply.rs  shortlist.rs  shortlist_hash.rs  skey.rs  sum.rs  sym_key.rs  to_affine.rs  to_projective.rs  token_index.rs  viewing_key.rs
crates/shielder-circuits/src/chips/range_check/: bits.rs  gate.rs  mod.rs  running_sum.rs
crates/shielder-circuits/src/chips/shortlist_hash/: chip.rs  mod.rs  off_circuit.rs  skip_hash_gate.rs
crates/shielder-circuits/src/chips/token_index/: gates.rs  mod.rs
crates/shielder-circuits/src/circuits/: marshall.rs  mod.rs  test_utils.rs  utils.rs
crates/shielder-circuits/src/circuits/deposit/: chip.rs  circuit.rs  knowledge.rs  mod.rs
crates/shielder-circuits/src/circuits/merkle/: chip.rs  circuit.rs  knowledge.rs  mod.rs
crates/shielder-circuits/src/circuits/new_account/: chip.rs  circuit.rs  knowledge.rs  mod.rs
crates/shielder-circuits/src/circuits/withdraw/: chip.rs  circuit.rs  knowledge.rs  mod.rs
crates/shielder-circuits/src/curve_arithmetic/: curve_scalar.rs  curve_scalar_field.rs  grumpkin_point.rs  mod.rs
crates/shielder-circuits/src/gates/: balance_increase.rs  balance_update.rs  is_binary.rs  is_bit.rs  is_point_on_curve.rs  is_point_on_curve_affine.rs  linear_equation.rs  membership.rs  mod.rs  point_add.rs  point_double.rs  point_is_on_curve.rs  points_add.rs  range_check.rs  scalar_multiply.rs  sum.rs  test_utils.rs  tests.rs  to_affine.rs  utils.rs
crates/shielder-circuits/src/grumpkin/: curve_operations.rs  mod.rs  native.rs  point_add.rs  utils.rs
crates/shielder-circuits/src/poseidon/: mod.rs  spec.rs
crates/transcript/: Cargo.toml  LICENSE
crates/transcript/src/: lib.rs  transcript.rs
scripts/: e2e_test_anonymity_revoking.sh
