[package]
name = "macros"
version = "0.1.0"
description = "Procedural macros for zkOS crates"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
