[package]
name = "shielder-anonymity-revoking"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
halo2_proofs = { workspace = true }
postgres = { workspace = true }
prettytable-rs = { workspace = true }
rayon ={ workspace = true}
secrecy = { workspace = true }
shielder-circuits = { workspace = true, features = ["multithreading"] }
shielder-rust-sdk = { workspace = true, features = ["contract"] }
tokio = { workspace = true }
