[package]
name = "shielder-circuits"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
bench = false # allows passing arguments through to criterion

[[bin]]
name = "measure-circuits"
path = "src/bin/measure_circuits.rs"

[dependencies]
console_error_panic_hook = { workspace = true }
getrandom = { workspace = true, optional = true }
halo2_poseidon = { workspace = true }
halo2_proofs = { workspace = true }
human_bytes = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }
sha2 = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
transcript = { workspace = true }

[features]
default = []
multithreading = ["rayon"]

[package.metadata.cargo-machete]
ignored = ["getrandom", "rayon"]

[dev-dependencies]
criterion = { workspace = true }
halo2_proofs = { workspace = true, default-features = true }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon" }

[[bench]]
name = "benchmarks"
path = "benches/bench.rs"
harness = false
